--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,7 @@ $red:              #e24040;
 $content-width:    800px;
 
 $on-palm:          600px;
+$nav-collapse:     660px;
 $on-laptop:        800px;
 
 
